Fix navigation jumping issue and autozoom on input fields for iphone

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -124,7 +124,7 @@ nav ol { list-style: none outside none; }
 .main { 
 	& {
 		background-color: $silver;
-		// padding-top: 78px;
+		margin-top: 78px;
 		// min-height: calc(100vh - 109px);
 	}
 }
