--- a/client/src/styles/Navigation.scss
+++ b/client/src/styles/Navigation.scss
@@ -12,7 +12,7 @@
 
 .navigation {
 	& {
-		position: relative;
+		position: absolute;
 		left: 0;
 		top: 0;
 		z-index: 100;
