--- a/client/src/styles/Posts.scss
+++ b/client/src/styles/Posts.scss
@@ -13,6 +13,7 @@
         margin: 10px;
         min-height: 150px;
         max-width: 275px;
+        margin: 0 auto;
         padding: 0;
         text-align: left;
         overflow: hidden;
